charon/tests/ui/stealing.out
thread 'rustc' panicked at compiler/rustc_mir_transform/src/lib.rs:649:24:
do not use `optimized_mir` for constants: Const { inline: false }
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting body.
  --> tests/ui/stealing.rs:13:1
   |
13 | const FOO: usize = 42;
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

Error: Charon driver exited with code 101
